--- a/back/views/lista.pug
+++ b/back/views/lista.pug
@@ -2,5 +2,5 @@ extends ../layout.pug
 
 h1 listado
 ul  
-    each cliente in arrClientes
-        li= cliente.nombre
+    each username in arrUsers
+        li= user.username
