--- a/back/views/users/lista.pug
+++ b/back/views/users/lista.pug
@@ -11,6 +11,7 @@ block content
                 th picuture 
                 th password 
                 th Email  
+                th Notes
                 th Acciones
         tbody 
             each user in arrUsers
@@ -20,6 +21,7 @@ block content
                     td= user.picture
                     td= user.password
                     td= user.email
+                    td= user.notes
                     td
-                        a.btn.btn-sm.btn-info(href="/users/edit/"+user.id) Editar
-                        a.btn.btn-sm.btn-danger.ml-2(href="/users/delete/"+user.id, onclick="return confirm('¿Estás seguro?')") Eliminar
+                        a.btn.btn-sm.btn-info(href="/user/edit/"+user.id) Editar
+                        a.btn.btn-sm.btn-danger.ml-2(href="/user/delete/"+user.id, onclick="return confirm('¿Estás seguro?')") Eliminar
