--- a/front/src/app/components/public/filter-trips/filter-trips.component.html
+++ b/front/src/app/components/public/filter-trips/filter-trips.component.html
@@ -1,6 +1,6 @@
 <app-nav></app-nav>
 <div class="container filter">
     <h5>Filtrar por pais</h5>
-    <app-countries></app-countries>
+    <app-countries (exportCountry)="filterCountry($event)"></app-countries>
 </div>
 <app-list-trips></app-list-trips>
