--- a/front/src/app/components/publish/form-trip/form-trip.component.html
+++ b/front/src/app/components/publish/form-trip/form-trip.component.html
@@ -1,12 +1,11 @@
-<div>
+<form>
     <h1>Publica tu viaje</h1>
     <h5>Pais al que viajas</h5>
     <app-countries (exportCountry)="eventCountry($event)"></app-countries>
     <h5>Fecha del viaje</h5>
-    <input type="date" placeholder="desde" [(ngModel)]="newTrip.from">
-    <input type="date" placeholder="hasta" [(ngModel)]="newTrip.to">
+    <input type="date" placeholder="desde">
     <h5>¿Quieres agregar alguna nota?</h5>
-    <textarea [(ngModel)]="newTrip.text"></textarea>
-    <button class="button-submit" (click)="onClick()">Publicar viaje</button>
-</div>
+    <textarea></textarea>
+    <input class="button-submit" (click)="onClick()" value="Publicar viaje">
+</form>
 
