antes de maquetar

--- a/front/src/app/components/common/header/header.component.html
+++ b/front/src/app/components/common/header/header.component.html
@@ -3,8 +3,8 @@
         <a [routerLink]="['/home']" class="logo">
             <img src="../../../../assets/images/logo-w.svg" alt="logo">
         </a>
-        <a [routerLink]="['/register']">Entrar</a>
-        <div class="logged">
+        <a [routerLink]="['/register']" class="logarme">LOGARME</a>
+        <div class="logged" style="display: none;">
             <a class="icon">
                 <img src="../../../../assets/images/bell.svg" alt="">
                 <span class="alert"></span>
