Maquetado login y register

--- a/front/src/app/components/common/header/header.component.html
+++ b/front/src/app/components/common/header/header.component.html
@@ -3,7 +3,7 @@
         <a [routerLink]="['/home']" class="logo">
             <img src="../../../../assets/images/logo-w.svg" alt="logo">
         </a>
-        <a [routerLink]="['/register']" class="logarme">LOGARME</a>
+        <a [routerLink]="['/register']" class="logarme">ENTRAR</a>
         <div class="logged" style="display: none;">
             <a class="icon">
                 <img src="../../../../assets/images/bell.svg" alt="">
