--- a/front/src/app/components/public/nav/nav.component.scss
+++ b/front/src/app/components/public/nav/nav.component.scss
@@ -1,32 +1,1 @@
-@import '../../../../scss/styles.scss';
-
-.tab-nav{
-    display: flex;
-    flex-wrap: wrap;
-    a {
-        width: 50%;
-        text-align: center;
-        padding: $size*2 0;
-        background-color: $color4;
-        border-bottom-left-radius: $size*2;
-        h2 {
-            color: $color1;  
-        }
-    }    
-    a:first-child {
-        border-bottom: {
-            right-radius: $size*2 !important;
-            left-radius: 0;
-        }
-    }
-    a.active {
-        background-color: $color3;
-        h2 {
-            color: $color2;
-        }
-        border-bottom: {
-            left-radius: 0;
-            right-radius: 0;
-        }
-    }
-}
+@import '../../../../scss/nav.scss';
