--- a/front/src/app/components/public/filter-caprices/filter-caprices.component.html
+++ b/front/src/app/components/public/filter-caprices/filter-caprices.component.html
@@ -4,3 +4,4 @@
     <app-countries (exportCountry)="filterCountry($event)"></app-countries>
 </div>
 <app-list-caprices [arrCaprices]="arrCaprices"></app-list-caprices>
+<a [routerLink]="['/type']" class="button-secondary button button-publish">Publicar viaje o deseo</a>
