--- a/front/src/app/components/public/home/home.component.html
+++ b/front/src/app/components/public/home/home.component.html
@@ -1,3 +1,13 @@
-<a [routerLink]="['/listTrip']">Ver viajes</a>
-<a [routerLink]="['/listCaprice']">Ver caprichos</a>
-<a class="button-primary" [routerLink]="['/type']" class="publish-button">Publicar un viaje o un capricho</a>
+<div class="home">
+    <div class="hero-text">
+        <div>
+            <h2>Descubre productos en tus viajes</h2>
+            <a [routerLink]="['/listCaprice']" class="button button-primary">Ver deseos</a>
+        </div>
+        <div>
+            <h2>Pide lo que necesitas de otros países</h2>
+            <a [routerLink]="['/listTrip']" class="button button-primary">Ver viajes</a>
+        </div>
+    </div>
+    <a [routerLink]="['/type']" class="button-secondary button button-publish">Publicar viaje o deseo</a>
+</div>
