--- a/front/src/app/components/user/login/login.component.html
+++ b/front/src/app/components/user/login/login.component.html
@@ -1,2 +1,24 @@
-
-<h1>login</h1>
+<app-nav-perfil></app-nav-perfil>
+<div class="container login">
+    <div class="form">
+        <div class="form-control">
+            <h5>Nombre de usuario o e-mail</h5>
+            <input type="text">
+            <div class="alert">
+                <p>
+                    No existe ese usuario
+                </p>
+            </div>
+        </div>
+        <div class="form-control">
+            <h5>Password</h5>
+            <input type="password">
+            <div class="alert">
+                <p>
+                    El password es incorrecto
+                </p>
+            </div>
+        </div>
+        <button class="button button-primary button-register" type="submit" value="enviar">Entrar</button>
+    </div>
+</div>
