--- a/front/src/scss/styles.scss
+++ b/front/src/scss/styles.scss
@@ -49,6 +49,7 @@ a {
 body{
   font-family: $font1;
   font-size: $fbase;
+  background-color: $color3;
 }
 h1 {
   font: {
@@ -85,6 +86,10 @@ h5 {
     weight: 700;
   }
 }
+.alert {
+  font-weight: $sbold;
+  color: $color2;
+}
 
 //forms
 input , select {
@@ -94,11 +99,98 @@ input , select {
 }
 
 // components
-.publish-button {
-    text-align: center;
+
+//buttons
+.button {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  color: $color1;
+  text-align: center;
+  width: $size*30;
+  text-transform: uppercase;
+  font-weight: $bold;
+  font-size: $fbase*1.2;
+  padding: $size*2 $size;
+  border: {
+    radius: $size*4;
+    width: $size/2;
+    style: solid;
+  }
+};
+.button-primary {
+  background-color: $color3;
+  border-color: $color1;
+  color: $color2;
+};
+.button-secondary {
+  background-color: $color1;
+  border-color: $color2;
+  color: $color3;
+};
+.button-publish {
     position: fixed;
     z-index: 2;
     bottom: $size*2;
     width: calc(100% - #{$size*4});
     left: $size*2;
+}
+
+//forms
+.form {
+    display: flex;
+    flex-wrap: wrap;
+    .form-control {
+      display: flex;
+      flex-wrap: wrap;
+      width: 100%;
+      padding-top: $size*2;
+      input {
+        margin-top: $size;
+      }
+      a {
+        color: $color2;
+        font-weight: $sbold;
+      }
+    }
+    input[type="text"], input[type="email"], input[type="password"] {
+      width: 100%;
+    }
+    figure {
+        width: 33%;
+        display: inline;
+    }
+    .upload-picture {          
+        position: relative;
+        display: inline-block;
+      }
+       
+    .upload-picture::before {
+        color: $color1;
+        text-align: center;
+        text-transform: uppercase;
+        font-weight: $bold;
+        font-size: $fbase*1.2;
+        padding: $size*2 $size;
+        border: {
+          radius: $size*4;
+          width: $size/2;
+          style: solid;
+        }
+        display: flex;            
+        justify-content: center;
+        align-items: center;
+        content: 'SUBIR FOTO'; /* testo por defecto */
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 35px;
+        bottom: 0;                
+      }
+       
+    .upload-picture input[type="file"] {
+        opacity: 0;
+        width: $size*28;
+        display: inline-block;            
+      }
 }
