Opción ALL en filtros

--- a/front/src/app/components/public/countries/countries.component.html
+++ b/front/src/app/components/public/countries/countries.component.html
@@ -1,5 +1,6 @@
 <div class="countriesList">
     <select (change)="onChange()" [(ngModel)]="country">
+        <option value="">ALL</option>
         <option value="Afganistan">Afghanistan</option>
         <option value="Albania">Albania</option>
         <option value="Algeria">Algeria</option>
