--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header *ngIf="headerView"></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
 
