--- a/front/src/app/components/user/register/register.component.html
+++ b/front/src/app/components/user/register/register.component.html
@@ -7,13 +7,13 @@
             </figure>
             <div class="upload-picture">
                 <h5>Foto de perfil</h5>
-                <input type="file" value="Subir una foto" name="picture" ngModel>
+                <input type="file" value="Subir una foto">
             </div>
         </div>
         <div class="form-control">
             <h5>Nombre de usuario</h5>
             <p>Este será el nombre que verán el resto de usuarios</p>
-            <input type="text" name="userName" ngModel>
+            <input type="text" name="username" ngModel>
         </div>
         <div class="form-control">
             <h5>E-mail</h5>
@@ -22,7 +22,7 @@
         </div>
         <div class="form-control">
             <h5>Password</h5>
-            <input type="password"  name="password" ngModel>
+            <input type="password" name="password" ngModel>
         </div>
         <div class="form-control">
             <h5>Repite el password</h5>
