--- a/front/src/app/components/public/home/home.component.html
+++ b/front/src/app/components/public/home/home.component.html
@@ -9,5 +9,5 @@
             <a [routerLink]="['/listTrip']" class="button button-primary">Ver viajes</a>
         </div>
     </div>
-    <a [routerLink]="['/type']" class="button-secondary button button-publish">Publicar viaje o deseo</a>
+    <a [routerLink]="['/formTrip']" class="button-secondary button button-publish">Publicar viaje o deseo</a>
 </div>
