--- a/front/src/app/components/common/header/header.component.html
+++ b/front/src/app/components/common/header/header.component.html
@@ -3,8 +3,8 @@
         <a [routerLink]="['/home']" class="logo">
             <img src="../../../../assets/images/logo-w.svg" alt="logo">
         </a>
-        <a [routerLink]="['/register']" class="logarme">ENTRAR</a>
-        <div class="logged" style="display: none;">
+        <a [routerLink]="['/register']" class="logarme"  id="toRegister"  *ngIf="!isActive">ENTRAR</a>
+        <div class="logged"  id="toProfile" *ngIf="isActive">
             <a class="icon">
                 <img src="../../../../assets/images/bell.svg" alt="">
                 <span class="alert"></span>
