--- a/front/src/app/components/user/login/login.component.html
+++ b/front/src/app/components/user/login/login.component.html
@@ -19,7 +19,7 @@
                 </p>
             </div>
         </div>
-        <div class="form-control">
+        <div class="form-control" style="display: none;">
             <label>
                 <input type="checkbox" id="registered" checked>
                 <span> Recordar mis datos</span>
