--- a/front/src/scss/nav.scss
+++ b/front/src/scss/nav.scss
@@ -12,6 +12,7 @@
         border-bottom-left-radius: $size*2;
         h2 {
             color: $color1;  
+            font-size: $fbase*1;
         }
     }    
     a:first-child {
