--- a/front/src/app/components/public/filter-trips/filter-trips.component.html
+++ b/front/src/app/components/public/filter-trips/filter-trips.component.html
@@ -4,4 +4,4 @@
     <app-countries (exportCountry)="filterCountry($event)"></app-countries>
 </div>
 <app-list-trips [arrTrips]="arrTrips"></app-list-trips>
-<a [routerLink]="['/type']" class="button-secondary button button-publish">Publicar viaje o deseo</a>
+<a [routerLink]="['/formTrip']" class="button-secondary button button-publish">Publicar viaje o deseo</a>
