--- a/front/src/app/components/publish/form-caprice/form-caprice.component.html
+++ b/front/src/app/components/publish/form-caprice/form-caprice.component.html
@@ -1,31 +1,37 @@
+<app-nav-publish></app-nav-publish>
 <form class="form" #newDesire="ngForm" (ngSubmit)="onSubmit(newDesire.value)">
-    <h1>Publica tu viaje</h1>
-    <h5>Pais al que viajas</h5>
+    <h5 class="m-top-2">Pais donde se encuentra tu deseo</h5>
     <app-countries (exportCountry)="eventCountry($event)"></app-countries>
     <div class="form-control">
 
         <!-- borrar -->
-        <input type="text" name="country" ngModel value="Catalonia">
-        <input type="number" name="user_id" ngModel value="1">
-
+        <!-- <input type="text" name="country" ngModel value="Catalonia">
+        <input type="number" name="user_id" ngModel value="1"> -->
         <!-- borrar -->
 
-
-
-        <h5>Nombre del producto</h5>
+        <h5>Nombre del deseo</h5>
         <input type="text" name="title" ngModel>
     </div>
-    <div class="form-control">
+
+    <!-- borrar -->
+    <div class="form-control" style="display: none;">
         <h5>Fecha de publicación</h5>
         <input type="date" name="date" ngModel>
+    </div>
+    <!-- borrar -->
+
+    <div class="form-control">
+        <figure>
+            <img src="../../../../assets/images/box.svg" alt="">
+        </figure>
+        <div class="upload-picture">
+            <h5>Foto del deseo</h5>
+            <input type="file" value="Subir una foto"  name="image" ngModel>
+        </div>
     </div>
     <div class="form-control">
         <h5>¿Quieres agregar alguna nota?</h5>
         <textarea name="notes" ngModel></textarea>
     </div>
-    <div class="form-control">
-        <h5>Foto</h5>
-        <input type="text" name="image" ngModel>
-    </div>
-    <input class="button button-primary button-register" type="submit" value="Publicar viaje">
+    <input class="button button-primary button-register button-publish" type="submit" value="Publicar deseo">
 </form>
