--- a/front/src/app/components/publish/form-trip/form-trip.component.html
+++ b/front/src/app/components/publish/form-trip/form-trip.component.html
@@ -1,28 +1,25 @@
+<app-nav-publish></app-nav-publish>
 <form class="form" #newTrip="ngForm" (ngSubmit)="onSubmit(newTrip.value)">
-    <h1>Publica tu viaje</h1>
-    <h5>Pais al que viajas</h5>
-    <app-countries (exportCountry)="eventCountry($event)"></app-countries>
     <div class="form-control">
-
+        <h5>Viajo a</h5>
+        <app-countries (exportCountry)="eventCountry($event)"></app-countries>
+    </div>
+    <div class="form-control">
         <!-- borrar -->
-        <input type="text" name="country" ngModel value="Catalonia">
-        <input type="number" name="user_id" ngModel value="1">
-
+        <!-- <input type="text" name="country" ngModel value="Catalonia">
+        <input type="number" name="user_id" ngModel value="1"> -->
         <!-- borrar -->
-
-
-
-        <h5>Salgo</h5>
+        <h5>Salgo el</h5>
         <input type="date" name="begining" ngModel>
     </div>
     <div class="form-control">
-        <h5>vulelvo</h5>
+        <h5>y vulelvon el</h5>
         <input type="date" name="ending" ngModel>
     </div>
     <div class="form-control">
-        <h5>¿Quieres agregar alguna nota?</h5>
+        <h5>¿Quieres agregar una nota?</h5>
         <textarea name="notes" ngModel></textarea>
     </div>
-    <input class="button button-primary button-register" type="submit" value="Publicar viaje">
+    <input class="button button-primary button-register button-publish" type="submit" value="Publicar viaje">
 </form>
 
