--- a/front/src/app/components/common/header/header.component.html
+++ b/front/src/app/components/common/header/header.component.html
@@ -15,7 +15,7 @@
             </a>
             <a [routerLink]="['/profile']">
                 <figure class="profile">
-                    <img src="https://www.dzoom.org.es/wp-content/uploads/2020/02/portada-foto-perfil-redes-sociales-consejos-810x540.jpg" alt="profile image">
+                    <img [src]="allData.picture" alt="profile image">
                 </figure>
             </a>
         </div>
