--- a/front/src/app/components/publish/form-trip/form-trip.component.html
+++ b/front/src/app/components/publish/form-trip/form-trip.component.html
@@ -13,7 +13,7 @@
         <input type="date" name="begining" ngModel>
     </div>
     <div class="form-control">
-        <h5>y vulelvon el</h5>
+        <h5>y vulelvo el</h5>
         <input type="date" name="ending" ngModel>
     </div>
     <div class="form-control">
