dejo a la mitad mailing

--- a/front/src/app/components/common/header/header.component.html
+++ b/front/src/app/components/common/header/header.component.html
@@ -9,7 +9,7 @@
                 <img src="../../../../assets/images/bell.svg" alt="">
                 <span class="alert"></span>
             </a>
-            <a class="icon">
+            <a class="icon"  [routerLink]='["/mailRecive"]'>
                 <img class="icon" src="../../../../assets/images/envelope.svg" alt="">
                 <span class="alert" style="display: none;"></span>
             </a>
