--- a/front/src/app/components/user/profile/profile.component.html
+++ b/front/src/app/components/user/profile/profile.component.html
@@ -3,5 +3,5 @@
     <figure>
         <img [src]="allData.picture" alt="Profile picture">
     </figure>
-    <button class="button button-primary button-publish">DESLOGARME</button>
+    <button class="button button-primary button-publish" (click)="onClick()" [routerLink]='["/home"]'>DESLOGARME</button>
 </div>
