--- a/front/src/app/components/user/register/register.component.html
+++ b/front/src/app/components/user/register/register.component.html
@@ -7,7 +7,7 @@
             </figure>
             <div class="upload-picture">
                 <h5>Foto de perfil</h5>
-                <input type="file" value="Subir una foto">
+                <input type="file" value="Subir una foto"   (onChange)="onChange($event)">
             </div>
         </div>
         <div class="form-control">
