funcionando la carga de imágenes en perfil

--- a/front/src/app/components/public/detail-caprice/detail-caprice.component.html
+++ b/front/src/app/components/public/detail-caprice/detail-caprice.component.html
@@ -25,7 +25,7 @@
 <div class="detail detail-caprice">
     <div class="figures">
         <figure>
-            <img [src]="myDesire.picture" alt="product image">
+            <img [src]="baseUrl+'/images/profile/'+myDesire.picture" alt="profile image">
         </figure>
         <figure>
             <img [src]="myDesire.image" alt="Desire image">
