--- a/front/src/app/components/public/detail-trip/detail-trip.component.html
+++ b/front/src/app/components/public/detail-trip/detail-trip.component.html
@@ -22,9 +22,9 @@
     <img src="../../../../assets/images/arrow.svg" alt="">
     <h3>VOLVER</h3>
 </a>
-<div class="detail detail-trip"  ng-repeat="item in myTrip">
+<div class="detail detail-trip" >
     <figure>
-        <img [src]="myTrip.picture" alt="">
+        <img  alt="profile picture" [src]="baseUrl+'/images/profile/'+myTrip.picture">
     </figure>
     <h5><span>{{ myTrip.username }}</span> va de viaje a</h5>
     <h1>{{ myTrip.country }}</h1>
