--- a/front/src/app/components/user/profile/profile.component.html
+++ b/front/src/app/components/user/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="profile">
     <h1>{{ allData.username }}</h1>
     <figure>
-        <img [src]="allData.picture" alt="Profile picture">
+        <img [src]="baseUrl+'/images/profile/'+allData.picture" alt="Profile picture">
     </figure>
     <button class="button button-primary button-publish" (click)="onClick()" [routerLink]='["/home"]'>DESLOGARME</button>
 </div>
