--- a/front/src/app/components/user/register/register.component.html
+++ b/front/src/app/components/user/register/register.component.html
@@ -1,28 +1,28 @@
 <app-nav-perfil></app-nav-perfil>
 <div class="container register">
-    <form class="form" #register="ngForm" (ngSubmit)="onSubmit(register.value)">
+    <form class="form" [formGroup]="formulario" (ngSubmit)="onSubmit()">
         <div class="form-control">
             <figure>
                 <img src="../../../../assets/images/no-user.svg" alt="">
             </figure>
             <div class="upload-picture">
                 <h5>Foto de perfil</h5>
-                <input type="file" value="Subir una foto"   (onChange)="onChange($event)">
+                <input type="file" value="Subir una foto" name="picture" (change)="onChange($event)" >
             </div>
         </div>
         <div class="form-control">
             <h5>Nombre de usuario</h5>
             <p>Este será el nombre que verán el resto de usuarios</p>
-            <input type="text" name="username" ngModel>
+            <input type="text" formControlName="username">
         </div>
         <div class="form-control">
             <h5>E-mail</h5>
             <p>Tu e-mail estará oculto y sólo lo usaremos para enviarte información relevante</p>
-            <input type="email" name="email" ngModel>
+            <input type="email" formControlName="email">
         </div>
         <div class="form-control">
             <h5>Password</h5>
-            <input type="password" name="password" ngModel>
+            <input type="password" formControlName="password">
         </div>
         <div class="form-control">
             <h5>Repite el password</h5>
@@ -34,6 +34,6 @@
                 <span> Acepto las <a>condiciones de uso</a></span>
             </label>
         </div>
-        <input class="button button-primary button-register" type="submit" value="ENVIAR">
+        <input class="button button-primary button-publish" type="submit" value="ENVIAR">
     </form>
 </div>
