funcionando subida de imágenes

--- a/front/src/app/components/public/detail-caprice/detail-caprice.component.html
+++ b/front/src/app/components/public/detail-caprice/detail-caprice.component.html
@@ -28,7 +28,7 @@
             <img [src]="baseUrl+'/images/profile/'+myDesire.picture" alt="profile image">
         </figure>
         <figure>
-            <img [src]="myDesire.image" alt="Desire image">
+            <img [src]="baseUrl+'/images/desire/'+myDesire.image" alt="Desire image">
         </figure>
     </div>
     <h5>A <span>{{ myDesire.username }}</span></h5>
